--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,16 @@ dependencies:
   awesome_dialog: ^2.2.0
   shared_preferences: ^2.0.13
   url_launcher: ^6.1.0
-  bottom_navy_bar: ^6.0.0
+  animated_bottom_navigation_bar: ^0.3.2
   receive_sharing_intent: ^1.4.5
+  flutter_easyloading: ^3.0.3
+  http: ^0.13.4
+  metadata_fetch: ^0.4.1
+  flutter_spinkit: "^5.1.0"
+  intl: ^0.17.0
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -27,8 +35,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
+
+  assets:
+    - assets/images/
 
   fonts:
-    - family: NotoSerifJP
+    - family: NotoSansJP
       fonts:
-        - asset: assets/fonts/NotoSerifJP-Regular.otf
+        - asset: assets/fonts/NotoSansJP-Regular.otf
