--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   metadata_fetch: ^0.4.1
   flutter_spinkit: "^5.1.0"
   intl: ^0.17.0
+  flutter_local_notifications: ^9.5.2
+  flutter_native_timezone: ^2.0.0
+  date_time_picker: "^2.1.0"
+  google_mobile_ads: ^1.2.0
+  flutter_native_splash: ^2.1.3+1
 
   flutter_localizations:
     sdk: flutter
@@ -32,6 +37,10 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+
+flutter_native_splash:
+  image: "assets/icons/splash.png"
+  color: "D5F6FC"
 
 flutter:
   uses-material-design: true
