タイトル編集機能追加

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -54,4 +54,5 @@
         <data android:scheme="https" />
       </intent>
     </queries>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 </manifest>
